--- a/pages/notadoaluno.html
+++ b/pages/notadoaluno.html
@@ -11,41 +11,51 @@
       *{
         background: black;
         color: grey;
-        font-size: 15px;
+        font-size: 4vw;
         text-align: center;
         font-family: 'Poppins', sans-serif;;
       }
       button{
         text-align: center;
-        border: 2px orange solid;
-        border-radius: 2px;
+        border: 0.4vw orange solid;
+        border-radius: 1vw;
         background: grey;
         color: yellow;
-        font-size: 20px;
+        font-size: 5vw;
         padding: 10px;
       }
       div {
-        margin-top: 10px;
-        border: 3px red solid;
-        width: 95vw;
+        margin-top: 3vw;
+        margin-left: 0,5vw;
+        border: 0.5vw red solid;
+        width: 97vw;
         height: 100vw;
       }
       .voltar{
-        margin-top: 50px;
-        margin-right: 10px;
-        width: 95px;
-        
+        margin-top: 5vw;
+        margin-right: 1.5vw;
+        width: 40vw;
+      }
+      span {
+        margin: 1.5vw;
       }
     </style>
     <body>
-      <button onclick="aluno()">Nota do aluno</button>
+      <button onclick="aluno()" style="margin-top: 2vw;">Nota do aluno</button>
    <div id="nota"></div>
-   <button onclick="limpar()" style="margin-top: 10px;">LIMPAR</button><br>
+   <button onclick="limpar()" style="margin-top: 3vw;">LIMPAR</button><br>
    <a href="../index.html"><button class="voltar">Voltar</button></a>
    <a href="../midia/download/notadoaluno.zip" type="application/zip"><button>Baixe a pagina</button></a>
    <script>
      const id = document.getElementById("nota");
+       let contador = 0;
+       let heigth = 35
      function aluno() {
+       ++contador
+       if (contador >= 8) {
+         heigth += 10
+         id.style.height = `${heigth}%`;
+       }
        const nome = prompt('Nome Do aluno');
        let nota1 = Number(prompt('1° nota do aluno'));
        if (isNaN(nota1)) {
@@ -69,6 +79,9 @@
        }}
        function limpar() {
          id.innerHTML = ''
+         contador = 0;
+         heigth = 35;
+         id.style.height = `100vw`;
        }
    </script>
       </body>
