--- a/pages/notadoaluno.html
+++ b/pages/notadoaluno.html
@@ -13,7 +13,7 @@
         color: grey;
         font-size: 4vw;
         text-align: center;
-        font-family: 'Poppins', sans-serif;;
+        font-family: 'Poppins', sans-serif;
       }
       button{
         text-align: center;
