--- a/index.html
+++ b/index.html
@@ -5,11 +5,14 @@
       <meta name="theme-color" content="#000000" />
     <meta http-equiv="content-type" content="text/html; charset=utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="shortcut icon" href="#">
+    <link rel="shortcut icon" href="https://cdn-icons-png.flaticon.com/512/4481/4481585.png">
     <title>Mini site</title>
     </head>
     <body>
+      <h1><strong>Exemplos de código e sites úteis</strong></h1>
+      <div class="paginas">
       <a href="pages/notadoaluno.html"><button>Desafio [Nota do aluno]</button></a>
+      </div>
   <script src="script/index.js"></script>
       </body>
 </html>
