--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
       <div class="paginas">
       <a href="pages/notadoaluno.html"><button>Desafio [Nota do aluno]</button></a>
       </div>
+jjfjfjfjfj
   <script src="script/index.js"></script>
       </body>
 </html>
