--- a/pages/notadoaluno.html
+++ b/pages/notadoaluno.html
@@ -13,7 +13,7 @@
         color: grey;
         font-size: 4vw;
         text-align: center;
-        font-family: 'Poppins', sans-serif;;
+        font-family: 'Poppins', sans-serif;
       }
       button{
         text-align: center;
@@ -28,6 +28,7 @@
         margin-top: 3vw;
         margin-left: 0,5vw;
         border: 0.5vw red solid;
+        border-radius: 1vw;
         width: 97vw;
         height: 100vw;
       }
