--- a/index.html
+++ b/index.html
@@ -12,7 +12,9 @@
       <h1><strong>Exemplos de código e sites úteis</strong></h1>
       <div class="paginas">
       <a href="pages/notadoaluno.html"><button>Desafio [Nota do aluno]</button></a>
-      </div>
+      <a href="pages/horadodia.html"><button>Desafio [Horas do dia]</button></a>
+      
+</div>
   <script src="script/index.js"></script>
       </body>
 </html>
