--- a/pages/notadoaluno.html
+++ b/pages/notadoaluno.html
@@ -46,7 +46,7 @@
    <div id="nota"></div>
    <button onclick="limpar()" style="margin-top: 3vw;">LIMPAR</button><br>
    <a href="../index.html"><button class="voltar">Voltar</button></a>
-   <a href="../midia/download/notadoaluno.zip" type="application/zip"><button>Baixe a pagina</button></a>
+   <a href="midia/download/notadoaluno.zip" type="application/zip"><button>Baixe a pagina</button></a>
    <script>
      const id = document.getElementById("nota");
        let contador = 0;
