--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="pt-br">
   <head>
-      <link rel="stylesheet" href="style/index.css">
+      <link rel="stylesheet" href="index.css">
       <meta name="theme-color" content="#000000" />
     <meta http-equiv="content-type" content="text/html; charset=utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -15,6 +15,6 @@
       <a href="pages/horadodia.html"><button>Desafio [Horas do dia]</button></a>
       
 </div>
-  <script src="script/index.js"></script>
+  <script src="index.js"></script>
       </body>
 </html>
