--- a/index.html
+++ b/index.html
@@ -9,12 +9,42 @@
     <title>Mini site</title>
     </head>
     <body>
-      <h1><strong>Exemplos de código e sites úteis</strong></h1>
-      <div class="paginas">
-      <a href="pages/notadoaluno.html"><button>Desafio [Nota do aluno]</button></a>
-      <a href="pages/horadodia.html"><button>Desafio [Horas do dia]</button></a>
-      
-</div>
-  <script src="index.js"></script>
+      <header>
+        <p><strong>Veja alguns prototipos e exercicios abaixo:</strong>
+        </header>
+        <span id="btnvolta">
+        <button class="left" onclick="passa()"><</button>
+        </span>
+        <span id="btnpassa">
+        <button onclick="passa()">></button>
+        </span>
+      <section class="paginas" id="paginas">
+        <a href="pages/horadodia.html"><img src="pages/midia/images/sitehorasdodia.jpg"></a>
+       <p class="bolinhas">○●</p>
+      </section>
+      <footer id="descricao">
+        <h1>Descrição:</h1>
+        <p class="descricao"><strong>Horas do dia é um site simples que a cada hora do dia tem uma decoração diferente, Entre e veja clicando na imagem acima.</strong></p>
+      </footer>
+  <script>
+  const paginas = document.getElementById("paginas")
+  const descricao = document.getElementById("descricao")
+  const btnvolta = document.getElementById("btnvolta")
+  const btnpassa = document.getElementById("btnpassa")
+    function passa() {
+      paginas.innerHTML = '<a href="pages/notadoaluno.html"> <img src="pages/midia/images/sitenotadoaluno.jpg"></a><p class="bolinhas">●○</p>'
+      descricao.innerHTML = `<h1>Descrição:</h1>
+        <p class="descricao"><strong>Calculador de nota do aluno é uma cauculadora simples que caucula se o aluno passou ou nao de acordo com suas notas obs: a ultima nota dobra, Entre e veja clicando na imagem acima.</strong></p>`
+        btnvolta.innerHTML = `<button class="left" onclick="volta()"><</button>`
+        btnpassa.innerHTML = `<button onclick="volta()">></button>`
+    }
+    function volta() {
+      paginas.innerHTML = '<a href="pages/horadodia.html"> <img src="pages/midia/images/sitehorasdodia.jpg"></a><p class="bolinhas">○●</p>'
+      descricao.innerHTML = `<h1>Descrição:</h1>
+        <p class="descricao"><strong>Horas do dia é um site simples que a cada hora do dia tem uma decoração diferente, Entre e veja clicando na imagem acima.</strong></p>`
+        btnvolta.innerHTML = `<button class="left" onclick="passa()"><</button>`
+        btnpassa.innerHTML = `<button onclick="passa()">></button>`
+    }
+  </script>
       </body>
 </html>
