--- a/pages/horadodia.html
+++ b/pages/horadodia.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="pt-br">
   <head>
-      <link rel="stylesheet" href="../style/horadodia.css">
+      <link rel="stylesheet" href="style/horadodia.css">
       <meta name="theme-color" content="#000000" />
     <meta http-equiv="content-type" content="text/html; charset=utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
