--- a/pages/horadodia.html
+++ b/pages/horadodia.html
@@ -15,7 +15,9 @@
       
        <section id="escrita">
          </section>
-         
+         <a href="../index.html">
+         <button><<<</button>
+         </a>
          <footer>
         <p>•AntoninMaker•</p>
         </footer>
