--- a/pages/horadodia.html
+++ b/pages/horadodia.html
@@ -16,7 +16,7 @@
        <section id="escrita">
          </section>
          <a href="../index.html">
-         <button><<<</button>
+         <input type="button" value="<<<">
          </a>
          <footer>
         <p>•AntoninMaker•</p>
