--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <body>
     
       <header>
-        <p><strong>Veja alguns prototipos e exercicios abaixo:</strong>
+        <p><strong>Veja alguns exercicios abaixo:</strong>
         </header>
         <div id="buttons">
           
